--- a/VehicleLoanSystem/Views/Administrator/Report.cshtml
+++ b/VehicleLoanSystem/Views/Administrator/Report.cshtml
@@ -13,7 +13,7 @@
           <tbody>
             <tr>
               <td>Monthly Granted Loan Amount</td>
-              <td>@TempData["MonthlyGivenOut"] ETB</td>
+              <td>@TempData["MonthlyGivenOut"] INR</td>
             </tr>
             <tr>
               <td>Monthly Active Loan</td>
@@ -25,7 +25,7 @@
             </tr>
             <tr>
               <td>Monthly Profit</td>
-              <td>@TempData["MonthlyProfit"] ETB</td>
+              <td>@TempData["MonthlyProfit"] INR</td>
             </tr>
             <tr>
               <td>Monthly Active Customers</td>
@@ -33,15 +33,15 @@
             </tr>
             <tr>
               <td>Monthly Expected Payment to Paid</td>
-              <td>@TempData["MonthlyExpectedPayment"] ETB</td>
+              <td>@TempData["MonthlyExpectedPayment"] INR</td>
             </tr>
             <tr>
               <td>Monthly Total Amount Of Money Paid</td>
-              <td>@TempData["MonthlyPayedAmount"] ETB</td>
+              <td>@TempData["MonthlyPayedAmount"] INR</td>
             </tr>
             <tr>
               <td>Monthly Total Amount Of Penalty Money</td>
-              <td>@TempData["MonthlyPayedPenalty"] ETB</td>
+              <td>@TempData["MonthlyPayedPenalty"] INR</td>
             </tr>
 
             
@@ -58,7 +58,7 @@
           <tbody>
             <tr>
               <td>Yearly Granted Loan Amount</td>
-              <td>@TempData["YearlyGivenOut"] ETB</td>
+              <td>@TempData["YearlyGivenOut"] INR</td>
             </tr>
             <tr>
               <td>Yearly Active Loan</td>
@@ -70,7 +70,7 @@
             </tr>
             <tr>
               <td>Yearly Profit</td>
-              <td>@TempData["YearlyProfit"] ETB</td>
+              <td>@TempData["YearlyProfit"] INR</td>
             </tr>
             <tr>
               <td>Yearly Active Customers</td>
@@ -78,7 +78,7 @@
             </tr>
             <tr>
               <td>Yearly Total Amount Of Money Paid</td>
-              <td>@TempData["YearlyPayment"] ETB</td>
+              <td>@TempData["YearlyPayment"] INR</td>
             </tr>
           </tbody>
         </table>
