--- a/VehicleLoanSystem/Views/Customer/Report.cshtml
+++ b/VehicleLoanSystem/Views/Customer/Report.cshtml
@@ -44,7 +44,7 @@
                @if(TempData["TotalMoneyPaid"].Equals(0)){
                        <td> <span>Empty</span></td>
                    }else{
-                       <td>@TempData["TotalMoneyPaid"] ETB</td>
+                       <td>@TempData["TotalMoneyPaid"] INR</td>
               }
             </tr>
             <tr>
@@ -52,7 +52,7 @@
               @if(TempData["TotalMoneyPaid"].Equals(0)){
                        <td> <span>Empty</span></td>
                    }else{
-              <td>@TempData["TotalPenaltyMoney"] ETB</td>
+              <td>@TempData["TotalPenaltyMoney"] INR</td>
               }
             </tr>
        
