--- a/VehicleLoanSystem/Views/Customer/ViewLoan.cshtml
+++ b/VehicleLoanSystem/Views/Customer/ViewLoan.cshtml
@@ -30,13 +30,13 @@
 
 
             <th>
-                @Html.DisplayNameFor(model => model.loanAmount)
+                @Html.DisplayNameFor(model => model.LoanAmount)
             </th>
             <th>
                   Loan Status
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.loanDate)
+                @Html.DisplayNameFor(model => model.LoanDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TotalPayableAmount)
@@ -69,11 +69,11 @@
             </td>
 
             <td>
-                @Html.DisplayFor(modelItem => item.Salary) ETB
+                @Html.DisplayFor(modelItem => item.Salary) INR
             </td>
 
             <td>
-                @Html.DisplayFor(modelItem => item.loanAmount) ETB
+                @Html.DisplayFor(modelItem => item.LoanAmount) INR
             </td>
             <td>
                 @if (item.LoanGrant == "REJECTED")
@@ -90,16 +90,16 @@
                 }
             </td>
             <td>
-                   @item.loanDate.ToString("MMMM dd")
+                   @item.LoanDate.ToString("MMMM dd")
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TotalPayableAmount) ETB
+                @Html.DisplayFor(modelItem => item.TotalPayableAmount) INR
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MonthlyPayableAmount) ETB
+                @Html.DisplayFor(modelItem => item.MonthlyPayableAmount) INR
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MonthlyPenalty) ETB
+                @Html.DisplayFor(modelItem => item.MonthlyPenalty) INR
             </td>
             
             @if (item.RejectionReason != "NONE")
