--- a/VehicleLoanSystem/Views/Customer/DeleteLoan.cshtml
+++ b/VehicleLoanSystem/Views/Customer/DeleteLoan.cshtml
@@ -22,17 +22,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
         </dd>
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MiddleName)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MiddleName)
-        </dd>
+        </dd> *@
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sex)
+            @Html.DisplayNameFor(model => model.Gender)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sex)
+            @Html.DisplayFor(model => model.Gender)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
@@ -47,10 +47,10 @@
             @Html.DisplayFor(model => model.Phone)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.loanPlanId)
+            @Html.DisplayNameFor(model => model.LoanPlanId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.loanPlanId)
+            @Html.DisplayFor(model => model.LoanPlanId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Salary)
@@ -59,22 +59,22 @@
             @Html.DisplayFor(model => model.Salary)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.loanTypeId)
+            @Html.DisplayNameFor(model => model.LoanTypeId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.loanTypeId)
+            @Html.DisplayFor(model => model.LoanTypeId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.loanPurpose)
+            @Html.DisplayNameFor(model => model.LoanPurpose)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.loanPurpose)
+            @Html.DisplayFor(model => model.LoanPurpose)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.loanAmount)
+            @Html.DisplayNameFor(model => model.LoanAmount)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.loanAmount)
+            @Html.DisplayFor(model => model.LoanAmount)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LoanGrant)
@@ -83,10 +83,10 @@
             @Html.DisplayFor(model => model.LoanGrant)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.loanDate)
+            @Html.DisplayNameFor(model => model.LoanDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.loanDate)
+            @Html.DisplayFor(model => model.LoanDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TotalPayableAmount)
