--- a/VehicleLoanSystem/Views/Customer/EditLoan.cshtml
+++ b/VehicleLoanSystem/Views/Customer/EditLoan.cshtml
@@ -23,15 +23,15 @@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="MiddleName" class="control-label"></label>
                 <input asp-for="MiddleName" class="form-control" />
                 <span asp-validation-for="MiddleName" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
-                <label asp-for="Sex" class="control-label"></label>
-                <input asp-for="Sex" class="form-control" />
-                <span asp-validation-for="Sex" class="text-danger"></span>
+                <label asp-for="Gender" class="control-label"></label>
+                <input asp-for="Gender" class="form-control" />
+                <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
@@ -44,8 +44,8 @@
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="loanPlanId" class="control-label"></label>
-                <select class="form-control" id="loanPlanId" asp-for="loanPlanId">
+                <label asp-for="LoanPlanId" class="control-label"></label>
+                <select class="form-control" id="LoanPlanId" asp-for="LoanPlanId">
                     @if (ViewData["plan"] != null)
                     {
 
@@ -73,8 +73,8 @@
                 <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="loanTypeId" class="control-label"></label>
-                <select class="form-control" id="loanTypeId" asp-for="loanTypeId">
+                <label asp-for="LoanTypeId" class="control-label"></label>
+                <select class="form-control" id="LoanTypeId" asp-for="LoanTypeId">
                     @if (ViewData["type"] != null)
                     {
 
@@ -94,14 +94,14 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="loanPurpose" class="control-label"></label>
-                <input asp-for="loanPurpose" class="form-control" />
-                <span asp-validation-for="loanPurpose" class="text-danger"></span>
+                <label asp-for="LoanPurpose" class="control-label"></label>
+                <input asp-for="LoanPurpose" class="form-control" />
+                <span asp-validation-for="LoanPurpose" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="loanAmount" class="control-label"></label>
-                <input asp-for="loanAmount" class="form-control" />
-                <span asp-validation-for="loanAmount" class="text-danger"></span>
+                <label asp-for="LoanAmount" class="control-label"></label>
+                <input asp-for="LoanAmount" class="form-control" />
+                <span asp-validation-for="LoanAmount" class="text-danger"></span>
             </div>
 
 
